2011-05-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkofm: Replace `$*' by `"$@"'.

	* Makefile.am (SUBDIRS): Add win32 to build C programs from
	Akira's W32TeX as WIN32 replacements for the shell scripts.

2010-12-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Skip mkocp and mkofm shell scripts.

2010-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reorganize web2c headers.
	* routines.h: #include <w2c/config.h> instead of <config.h>.

2010-04-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkocp.man, mkofm.man, otp2ocp.man, outocp.man:
	Uniform manpage formatting: bold for literals, italic for
	variable items, roman for meta items.

2009-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkocp.man, mkofm.man, otp2ocp.man, outocp.man: New files
	moved from ../../tetex/ to here.
	* Makefile.am (dist_man1_MANS): Adjusted.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* otp-lexer.l: Replace global vars i, j, and last by locals.
	* otp-parser.y (yyerror): Constify string param.
	* outocp.c (otp_names): Constify strings.
	* routines.[ch] (store_state): Constify string param.

2009-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: otp2ocp and outocp must depend explicitly on
	KPATHSEA_DEPEND, the implicit dependency via proglib is not enough.

2009-06-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otp2ocp.test, outocp.test, uni2lat.ocp, uni2lat.otp,
	uni2lat.out (all new): 	Shell scripts and data for test cases.
	* Makefile.am: add test cases.

2009-06-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otp2ocp.c, outocp.c, routines.c:
	removed #include <kpathsea/c-proto.h>.

2009-06-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* Use ANSI C prototypes for functions.
	* otp-parser.y (yyerror): declare as static.
	* otp2ocp.c (output, otp_read): declare as static.
	* outocp.c (ctp_get, ctp_read, ctp_explain): declare as static.
